# simple-cli

./: .gitignore  .pre-commit-config.yaml  README.md  Review.md  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: checks.yml  ci.yml
docs/: architecture.md
simple_cli/: controller.py  environment.py  executor.py  main.py  parser.py
simple_cli/commands/: __init__.py  assignment_command.py  cat_command.py  cd_command.py  command.py  command_storage.py  default_command.py  echo_command.py  exit_command.py  grep_command.py  ls_command.py  pwd_command.py  wc_command.py
simple_cli/exceptions/: empty_command_error.py  exit_exception.py
tests/: test_commands.py  test_parser.py
tests/e2e/: test_cli.py
tests/unit/: test_commands.py  test_parser.py
